--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="./app.js"></script>
@@ -25,15 +25,14 @@
     <div class="weather">
         <h2 class="city">Clima en Santa Marta</h2>
         <h1 class="temperatura">34&#176C</h1>
-        <img src="" alt="" class="icon"/>
+        <div class="flex">
+        <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon"/>
         <div class="descripcion">Nublado</div>
+    </div>
         <div class="humedad">Humedad : 60%</div>
         <div class="viento">Velocidad del viento: 6.3 Km/h</div>
-
     </div>
 </div>
-
-
     
 </body>
 </html>
